<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151515"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageCapa"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/r" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="231dp"
        android:layout_height="46dp"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageCapa"
        app:srcCompat="@drawable/dark" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="28dp"
        android:text="@string/chocante"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrepiante"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/textView"
        app:layout_constraintStart_toEndOf="@id/textView"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sinistro"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/textView2"
        app:layout_constraintStart_toEndOf="@id/textView2"
        android:layout_marginStart="20dp" />

    <Button
        android:id="@+id/button_minhaLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/plus"
        android:padding="0dp"
        android:text="@string/minhalista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <Button
        android:id="@+id/button_assistir"
        android:layout_width="125dp"
        android:layout_height="51dp"
        android:backgroundTint="#ff0000"
        android:drawableLeft="@drawable/play"
        android:paddingLeft="13dp"
        android:text="Assistir"
        app:layout_constraintTop_toTopOf="@id/button_minhaLista"
        app:layout_constraintStart_toEndOf="@id/button_minhaLista"
        android:layout_marginStart="20dp" />

    <Button
        android:id="@+id/detalhes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/info"
        android:padding="0dp"
        android:text="@string/detalhes"
        app:layout_constraintTop_toTopOf="@id/button_assistir"
        app:layout_constraintStart_toEndOf="@id/button_assistir"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lancamentos"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_minhaLista"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="108dp"
        android:layout_height="62dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/queensgambit" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="113dp"
        android:layout_height="61dp"
        app:layout_constraintTop_toTopOf="@id/imageView7"
        app:layout_constraintStart_toEndOf="@id/imageView7"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/wandinha" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="109dp"
        android:layout_height="62dp"
        app:layout_constraintTop_toTopOf="@id/imageView10"
        app:layout_constraintStart_toEndOf="@id/imageView10"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/doona" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="59dp"
        android:layout_height="67dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="46dp"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/series"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="47dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filmes"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/textView6"
        app:layout_constraintStart_toEndOf="@id/textView6"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/textView7"
        app:layout_constraintStart_toEndOf="@id/textView7"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="João Rodolfo Berger Andrade"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>